k8s/currency-roulette-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: currency-roulette-deployment
  namespace: wog-namespace
spec:
  replicas: 1
  selector:
    matchLabels:
      app: currency-roulette
  template:
    metadata:
      labels:
        app: currency-roulette
    spec:
      containers:
      - name: currency-roulette
        image: adiros/wog_final-currency_roulette:latest
        ports:
        - containerPort: 8000
        volumeMounts:
        - mountPath: /app
          name: currency-roulette-volume
        command: ["sh", "-c", "python manage.py runserver 0.0.0.0:8000"]
        resources:
          limits:
            memory: "512Mi"
            cpu: "500m"
          requests:
            memory: "256Mi"
            cpu: "250m"
      volumes:
      - name: currency-roulette-volume
        hostPath:
          path: /home/adiros/Desktop/Django_wog/wog_final_project/wog_final_project/currency_roulette
          type: Directory
---
apiVersion: v1
kind: Service
metadata:
  name: currency-roulette-service
  namespace: wog-namespace
spec:
  selector:
    app: currency-roulette
  ports:
  - protocol: TCP
    port: 8000
    targetPort: 8000
  type: ClusterIP
