k8s/currency_roulette_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: currency_roulette_deployment
  namespace: wog-namespace
spec:
  replicas: 1
  selector:
    matchLabels:
      app: currency_roulette
  template:
    metadata:
      labels:
        app: currency_roulette
    spec:
      containers:
      - name: currency_roulette
        image: adiros/wog_final-currency_roulette:latest
        ports:
        - containerPort: 8000
        volumeMounts:
        - mountPath: /app
          name: currency_roulette-volume
        command: ["sh", "-c", "python manage.py runserver 0.0.0.0:8000"]
        resources:
          limits:
            memory: "512Mi"
            cpu: "500m"
          requests:
            memory: "256Mi"
            cpu: "250m"
      volumes:
      - name: currency_roulette-volume
        hostPath:
          path: C:\Users\adirs\Desktop\Django_wog\currency_roulette
          type: Directory
---
apiVersion: v1
kind: Service
metadata:
  name: currency_roulette-service
  namespace: wog-namespace
spec:
  selector:
    app: currency_roulette
  ports:
  - protocol: TCP
    port: 8000
    targetPort: 8000
  type: ClusterIP
