k8s/game-picker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: game-picker-deployment
  namespace: wog-namespace
spec:
  replicas: 1
  selector:
    matchLabels:
      app: game-picker
  template:
    metadata:
      labels:
        app: game-picker
    spec:
      containers:
      - name: game-picker
        image: adiros/wog_final-game_picker:latest
        ports:
        - containerPort: 8000
        command: ["sh", "-c", "python manage.py runserver 0.0.0.0:8000"]
        readinessProbe:
          httpGet:
            path: "/"
            port: 8000
          initialDelaySeconds: 10
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: "/"
            port: 8000
          initialDelaySeconds: 60
          periodSeconds: 20
        resources:
          limits:
            memory: "512Mi"
            cpu: "500m"
          requests:
            memory: "256Mi"
            cpu: "250m"
---
apiVersion: v1
kind: Service
metadata:
  name: game-picker-service
  namespace: wog-namespace
spec:
  selector:
    app: game-picker
  ports:
  - protocol: TCP
    port: 8000
    targetPort: 8000
  type: ClusterIP
