k8s/guess-game-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: guess-game-deployment
  namespace: wog-namespace
spec:
  replicas: 1
  selector:
    matchLabels:
      app: guess-game
  template:
    metadata:
      labels:
        app: guess-game
    spec:
      containers:
      - name: guess-game
        image: adiros/wog_final-guess_game:latest
        ports:
        - containerPort: 8000
        volumeMounts:
        - mountPath: /app
          name: guess-game-volume
        command: ["sh", "-c", "python manage.py runserver 0.0.0.0:8000"]
        resources:
          limits:
            memory: "512Mi"
            cpu: "500m"
          requests:
            memory: "256Mi"
            cpu: "250m"
      volumes:
      - name: guess-game-volume
        hostPath:
          path: /home/adiros/Desktop/Django_wog/wog_final_project/wog_final_project/guess_game
          type: Directory
---
apiVersion: v1
kind: Service
metadata:
  name: guess-game-service
  namespace: wog-namespace
spec:
  selector:
    app: guess-game
  ports:
  - protocol: TCP
    port: 8000
    targetPort: 8000
  type: ClusterIP
