k8s/intro-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: intro-deployment
  namespace: wog-namespace
spec:
  replicas: 1
  selector:
    matchLabels:
      app: intro
  template:
    metadata:
      labels:
        app: intro
    spec:
      containers:
      - name: intro
        image: adiros/wog_final-intro:latest
        ports:
        - containerPort: 8000
        volumeMounts:
        - mountPath: /app
          name: intro-volume
        command: ["sh", "-c", "python manage.py runserver 0.0.0.0:8000"]
        resources:
          limits:
            memory: "512Mi"
            cpu: "500m"
          requests:
            memory: "256Mi"
            cpu: "250m"
      volumes:
      - name: intro-volume
        hostPath:
          path: /home/adiros/Desktop/Django_wog/wog_final_project/wog_final_project/intro
          type: Directory
---
apiVersion: v1
kind: Service
metadata:
  name: intro-service
  namespace: wog-namespace
spec:
  selector:
    app: intro
  ports:
  - protocol: TCP
    port: 8000
    targetPort: 8000
  type: ClusterIP
