k8s/mysql_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql_deployment
  namespace: wog-namespace
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
      - name: mysql
        image: adiros/wog_final-mysql:latest
        ports:
        - containerPort: 8000
        volumeMounts:
        - mountPath: /app
          name: mysql-volume
        command: ["sh", "-c", "python manage.py runserver 0.0.0.0:8000"]
        resources:
          limits:
            memory: "512Mi"
            cpu: "500m"
          requests:
            memory: "256Mi"
            cpu: "250m"
      volumes:
      - name: mysql-volume
        hostPath:
          path: C:\Users\adirs\Desktop\Django_wog\mysql
          type: Directory
---
apiVersion: v1
kind: Service
metadata:
  name: mysql-service
  namespace: wog-namespace
spec:
  selector:
    app: mysql
  ports:
  - protocol: TCP
    port: 8000
    targetPort: 8000
  type: ClusterIP
