k8s/savegame-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: savegame-deployment
  namespace: wog-namespace
spec:
  replicas: 1
  selector:
    matchLabels:
      app: savegame
  template:
    metadata:
      labels:
        app: savegame
    spec:
      containers:
      - name: savegame
        image: adiros/wog_final-savegame:latest
        ports:
        - containerPort: 8000
        volumeMounts:
        - mountPath: /app
          name: savegame-volume
        command: ["sh", "-c", "python manage.py migrate && python manage.py runserver 0.0.0.0:8000"]
        resources:
          limits:
            memory: "512Mi"
            cpu: "500m"
          requests:
            memory: "256Mi"
            cpu: "250m"
      volumes:
      - name: savegame-volume
        persistentVolumeClaim:
          claimName: wog-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: savegame-service
  namespace: wog-namespace
spec:
  selector:
    app: savegame
  ports:
  - protocol: TCP
    port: 8000
    targetPort: 8000
  type: ClusterIP
