k8s/selenium-tests-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: selenium-tests-deployment
  namespace: wog-namespace
spec:
  replicas: 1
  selector:
    matchLabels:
      app: selenium-tests
  template:
    metadata:
      labels:
        app: selenium-tests
    spec:
      containers:
      - name: selenium-tests
        image: adiros/wog_final-selenium_tests:latest
        ports:
        - containerPort: 8000
        volumeMounts:
        - mountPath: /app
          name: selenium-tests-volume
        command: ["sh", "-c", "python tests.py"]
        resources:
          limits:
            memory: "512Mi"
            cpu: "500m"
          requests:
            memory: "256Mi"
            cpu: "250m"
      volumes:
      - name: selenium-tests-volume
        hostPath:
          path: /home/adiros/Desktop/Django_wog/wog_final_project/wog_final_project/selenium_tests
          type: Directory
---
apiVersion: v1
kind: Service
metadata:
  name: selenium-tests-service
  namespace: wog-namespace
spec:
  selector:
    app: selenium-tests
  ports:
  - protocol: TCP
    port: 8000
    targetPort: 8000
  type: ClusterIP
