k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wog-ingress
  namespace: wog-namespace
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: intro.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: intro-service
            port:
              number: 8000
  - host: game-picker.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: game-picker-service
            port:
              number: 8000
  - host: savegame.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: savegame-service
            port:
              number: 8000
  - host: memory-game.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: memory-game-service
            port:
              number: 8000
  - host: guess-game.local
    http:
      paths:
      - pathType: Prefix
        backend:
          service:
            name: guess-game-service
            port:
              number: 8000
  - host: currency-roulette.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: currency-roulette-service
            port:
              number: 8000
